<resources>
    <string name="app_name">MyClass</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loading">加载中...</string>

    <string name="input_username">请输入用户名</string>
    <string name="input_password">密码</string>
    <string name="sign_in">登录</string>

    <string name="home_about">关于</string>
    <string name="home_week">查看当前周</string>
    <string name="home_total">查看总课表</string>
    <string name="home_choose">查看指定周</string>
    <string name="home_exit">再按一次退出</string>

    <string name="card_name">姓名：</string>
    <string name="card_number">卡号：</string>
    <string name="card_balance">余额：</string>
    <string name="stu_file">个人档案</string>
    <string name="campus_card">校园卡记录</string>
    <string name="schedule">课程表</string>
    <string name="manage">管理</string>
    <string name="mail_list">通讯录</string>
    <string name="sign_out">退出登录</string>
    <string name="action_settings">Settings</string>
</resources>
