<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stuFile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/stu_file" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/mail_list" />
            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
