<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="space.levan.myclass.view.ui.LoginActivity">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/user_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/input_username"
                                    android:inputType="number"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/input_password"
                                    android:imeActionLabel="sign in"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="numberPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/sign_in_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/sign_in"
                            android:textColor="#FFFFFF"
                            android:background="#1C86EE"
                            android:textStyle="bold" />

                </LinearLayout>

        </ScrollView>

</LinearLayout>